Update Gradle and enable benchmark bundle/module again
- FIXME: (somehow ClassNotFoundException: org.brackit.xquery.QueryContext is thrown when executing BenchmarkRunner.main())