@@ -111,12 +111,7 @@ subprojects {
                                  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
                                  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                                  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
-                                 "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                                 "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.lang=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.io=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.util=ALL-UNNAMED"]
+                                 "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"]
     }
 
     compileTestJava {
@@ -125,12 +120,7 @@ subprojects {
                                  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
                                  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                                  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
-                                 "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                                 "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.lang=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.io=ALL-UNNAMED",
-                                 "--add-opens=java.base/java.util=ALL-UNNAMED"]
+                                 "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"]
     }
 
     spotless {
